# github-secrets-observer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  config.toml.example
.github/workflows/: checks.yml  release.yml
src/: app.rs  cli.rs  config.rs  github_api.rs  main.rs  notifier.rs  observer.rs  validator.rs
