[package]
name = "github-secrets-observer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
config = "0.14.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = "1.0.193"
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = ["full"] }