[package]
name = "github-secrets-observer"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.76"
clap = { version = "4", features = ["derive"] }
config = "0.14.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
regex = "1.10.4"
serde = "1.0.193"
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = ["full"] }